<resources>
	<string name="app_name">치매돌봄</string>
	<string name="prompt_id">ID</string>
	<string name="prompt_password">Password</string>
	<string name="action_sign_in">Sign in or register</string>
	<string name="action_sign_in_short">완료</string>
	<string name="error_invalid_id">아이디가 잘못되었습니다/</string>
	<string name="error_invalid_password">비밀번호가 잘못되었습니다.</string>
	<string name="error_incorrect_password">비밀번호가 올바르지 않습니다.</string>
	<string name="error_field_required">필수입력입니다.</string>
	<string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="nav_header_title">Android Studio</string>
	<string name="nav_header_subtitle">android.studio@android.com</string>
	<string name="nav_header_desc">Navigation header</string>
	<string name="section_format">Hello World from section: %1$d</string>
	<string name="action_main1">도움말</string>
	<string name="action_main2">로그인정보</string>
	<string name="action_main4">앱 평가하기</string>
	<string name="action_main3">앱정보</string>
	<string name="action_main5">로그아웃</string>
	<string name="action_alarm">알람설정</string>
	<string name="action_mainAll">도움말</string>
	<string name="action_known1">치매종류 및 원인</string>
	<string name="action_prevention1">치매예방</string>
	<string name="action_supportmenu1">치매지원서비스</string>
	<string name="action_supportfir1">장기요양서비스</string>
	<string name="action_supportsec1">장기요양급여지원</string>
	<string name="action_supportthi1">치매안심센터</string>
	<string name="action_supportfor1">기타지원서비스</string>
	<string name="action_cure1">인지향상프로그램</string>
	<string name="action_diraymenu1">돌봄일기</string>
	<string name="action_diraymenu2">희망게시판</string>
	<string name="action_roadmap1">내비게이션</string>
	<string name="action_roadmap2">치매진단받기</string>
	<string name="action_dictionary1">치매환자의부탁말씀</string>
	<string name="action_dictionary2">돌봄사전</string>
	<string name="action_feelingmenu1">나의감정살피기</string>
	<string name="title_activity_known">1.치매알기</string>
	<string name="title_activity_prevention">2.치매예방</string>
	<string name="title_activity_roadmap">3.치매서비스 로드맵</string>
	<string name="roadmap_main1_sub1">치매정보내비게이션</string>
		<string name="text_roadmap_main1_sub1">
			-당신에게 힘이 되며,\n
			-당신의 상황에 알맞은,\n
			-맞춤형 치매지원 서비스를 안내해 드립니다.
		</string>
	<string name="roadmap_main1_sub2">치매진단받기</string>
	<string name="roadmap_main1_sub3">치매서비스찾기</string>
	<string name="title_activity_support">4.치매지원서비스</string>
		<string name="title_activity_supportmain1">4-1.장기요양급여 지원</string>
		<string name="title_activity_supportmain2">4-2.장기요양급여 지원 신청방법</string>
		<string name="title_activity_supportmain3">4-3.치매안심센터</string>
		<string name="title_activity_supportmain4">4-4.기타 지원서비스</string>
	<string name="title_activity_cureprogram">5.치료프로그램</string>
	<string name="title_activity_diary">6.우리들의 돌봄일기</string>
	<string name="title_activity_dictionary">7.돌봄사전</string>
	<string name="title_activity_dicmain1">7-1.초기치매</string>
	<string name="title_activity_dicmain2">7-2.중고도치매환자</string>
	<string name="title_activity_dicmain3">7-3.정신행동증상</string>
	<string name="title_activity_dicmain4">7-4.안전관리</string>
	<string name="title_activity_dicmain5">7-5.치매환자와의 일상생활</string>
	<string name="title_activity_feeling">8.나의감정살피기</string>
		<string name="text_feeling_main1">
			우울증 검사(GDS-K): 노인의 우울증상을 선별하기 위한 검사\n
			(출처:한국치매협회)
		</string>
		<string name="text_feeling_main2">
			자살생각 척도 검사(BSSI): 자살과 관련되는 생각과 행동을 측정하는 검사\n
			(출처:노인병학)
		</string>
		<string name="text_feeling_main3">
			부양스트레스검사: 주부양자의 총체적 스트레스 검사\n
			(출처: 김양이, 1999)
		</string>
	<string name="known_main1">치매종류 및 원인</string>
	<string name="known_main1_sub1">경도인지장애</string>
	<string name="known_main1_sub2">알츠하이머형치매</string>
	<string name="known_main1_sub3">혈관성치매</string>
	<string name="known_main1_sub4">루이체치매</string>
	<string name="known_main1_sub5">전두측두엽치매</string>
	<string name="known_main1_sub6">알코올치매</string>
	<string name="known_main1_sub7">가역성치매</string>
	<string name="known_main2">치매약물치료</string>
	<string name="known_main2_sub1">도네페질</string>
	<string name="known_main2_sub2">리바스티그민</string>
	<string name="known_main2_sub3">메만틴</string>
	<string name="known_main2_sub4">갈란타민</string>
	<string name="text_known_kind1">
		기억력의 저하가 정형적 노화를 벗어나 진행하여 정상이 범주에 속하지 않지만 치매로 진단할 수 있을 정도로 심하지 않은 상태입니다.\n\n
		매년 10~15% 비율로 치매로 이행되므로 치매의 조기진단과 치료에 중요하다.\n
		‘치매의 전 단계’라고도 합니다.\n\n
		정상노화 \u003C 경도인지장애 \u003C 치매
	</string>
	<string name="text_known_kind2">
		"가장 대표적이며 전체 치매의 50-80%를 차지합니다.\n"
		"뇌세포의 퇴화로 기억력을 비롯한 여러 인지기능이 점진적으로 저하되며 일상생활의 장애가 초래되는 만성 뇌질환 입니다.\n"
		"매우 서서히 발병하여 점진적으로 안화가 진행되는 것이 특징입니다.\n"
		"노인반과 신경섬유다발이 뇌에 점차 쌓이고, 이로 인하여 신경세포들이 죽으면서 발생합니다."
	</string>
	<string name="text_known_kind3">
		"두번째로 흔한 치매의 원인이며, 전체 치매의 15-20%를 차지합니다. 우리나라는 서양보다 비율이 높다.\n"
		"뇌졸증의 위험인자와 비슷하며, 뇌 혈관이 좋아지거나 막혀서 나타나는 허혈성 뇌혈관질환과 뇌혈관의 파열로 인해 출혈이 발생하는 출혈성 뇌혈관질환이 있습니다.\n"
		"고혈압, 당뇨, 고지혈증 등이 있는 경우, 또 흡연을 하거나 과음을 자주 할 경우 발생 위험이 증가합니다."
	</string>
	<string name="text_known_kind4">
		"전체 치매의 10-25% 정도를 차지할 정도로 흔한 질환이며, 시누클린이라는 단백질에 이상이 생겨 루이체가 만들어 집니다.\n"
		"루이체가 뇌 겉질에 축적이 되면 치매증상을 먼저 일으키게 되고, 환시, 주의력과 각성 등의 인지변화가 현저히 나타납니다."
	</string>
	<string name="text_known_kind5">
		"치매 중 5-10%정도를 차지하며, 전두엽이나 측두엽의 앞쪽에서부터 진행됩니다.\n"
		"많은 말을 하면서, 많은 것을 절제하고, 많은 것을 생각하고, 많은 것을 판단하는데 대부분 뇌의 앞쪽에서 담당합니다.\n"
		"이 부위에 문제가 발생할 경우 말을 이상하게 하고, 참을 성이 없어지고, 판단력이 저하될 수 있습니다."
	</string>
	<string name="text_known_kind6">
		"알코올은 신경세포에 부정적인 영향을 주며, 장기간 과음을 지속할 경우 이러한 영향이 축적되어 치매로 진행할 수 있습니다.\n"
		"알코올 자체의 독성에 의해 발생하는 경우도 있고, 알코올 섭취로 인한 비타민 B1결핍이 원인인 경우도 있습니다."
	</string>
	<string name="text_known_kind7">
		"완치가 가능한 원인에 의해 발생한 치매를 말하며 전체 치매의5-10%가 이에 해당합니다.\n"
		"대표적인 원인질환으로 우울증에 의한 가성치매, 정상압 뇌수두증, 뇌종양 및 만성 경막하 혈종, 감염성 질환, 내분비 질환, 결핍성 질환, 알코올 중독, 약물과 연관된 치매가 있습니다."
	</string>
	<string name="text_known_drug_info">
		!! 약물의 용량과 부작용은 의사와 상의합니다.\n
		과거에 먹던 약을 먹거나 의사와 상의 없이 약 복용을 중단하면 안됩니다.
	</string>
	<string name="text_known_drug1">
		▶ 아리셉트\n
		-사용시기: 경증, 중등도, 중증 치매\n
		-제형: 경구용\n
		-부작용: 오심, 구토, 설사, 어지럼증\n\n

		▶작용:\n
		아세틸콜린의 이용도를 높임으로써 작용하는 것으로 알려져 있는데 취침 전 하루에 한번 복용으로 가능합니다.\n
		뇌 안에서 아세틸콜린이 분해되어 없어지는 것을 담당하는 효소를 억제함으로써 뇌 안의 아세틸콜린의 양을 증가시켜 환자의 증상을 호전 시키고자 개발된 약물들입니다.\n
		초기 및 중기의 알츠하이머병에 걸려있는 일부 환자들에게서는 이 약에 의하여 인지 기능이 향상되는 것을 볼 수 있습니다.\n
		그러나 알츠하이머병 자체를 멈추거나 되돌이킬 수는 없습니다.\n
		얼마나 오랫동안 환자들이 이러한 약을 복용해야 하는지 또 얼마나 오랫동안 효과가 있는지에 대해서는 아직 명확하지 않습니다.\n\n

		▶부작용:\n
		오심과 설사, 피곤감등이 있으나 이러한 부작용들은 심하지 않고 곧 없어지게 됩니다.
	</string>
	<string name="text_known_drug2">
		▶ 엑셀론\n
		-사용시기: 경증, 중등도 치매\n
		-제형: 경구용, 패치\n
		-부작용: 오심, 구토, 설사, 어지럼증\n\n

		▶작용:\n
		아세틸콜린 에스테라제 억제제입니다.\n
		뇌 안에서 아세틸콜린이 분해되어 없어지는 것을 담당하는 효소를 억제함으로써 뇌 안의 아세틸콜린의 양을 증가시켜 환자의 증상을 호전 시키고자 개발된 약물들입니다.\n
		경증, 중등도 치매환자에게 사용합니다.\n\n

		▶부작용:\n
		오심, 구토, 설사, 어지럼증이 있으며 심하면 의사, 약사에게 알립니다.
	</string>
	<string name="text_known_drug3">
		▶ 에빅사\n
		-사용시기: 중등도, 중증 치매\n
		-제형: 경구용\n
		-부작용: 오심, 구토, 설사, 어지럼증\n\n

		▶작용:\n
		중등도에서 중증의 알츠하이머 치료에 사용하며 신경의 과도한 칼슘 유입 노출을 막습니다.\n
		보호자가 환자의 약물복용을 주기적으로 확인할 수 있는 경우 한해 시작합니다.\n\n

		▶부작용:\n
		오심, 구토, 설사, 어지럼증이 있으며 심하면 의사, 약사에게 알립니다.
	</string>
	<string name="text_known_drug4">
		▶ 레미닐\n
		-사용시기: 경등도, 중등도 치매\n
		-제형: 경구용\n
		-부작용: 오심, 구토, 설사, 어지럼증\n\n

		▶작용:\n
		신경전달물질 분비를 촉진하는 아세틸콜린이 분해효소에 의해 줄어드는 것을 방지함으로써 정상적인 뇌기능을 유지하게	해주는 작용을 합니다.\n
		신경전달물질의 분비를 증가시킴으로써 인지장애, 행동장애를 개선하고 기억력을 증진시키는 작용으로 알쯔하이머형 치매에 해한 치료효과를 가집니다.\n\n

		▶부작용:\n
		오심, 구토, 설사, 어지럼증이 있으며 심하면 의사, 약사에게 알립니다.
	</string>
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="prevention_main1_sub1">치매위험인자</string>
	<string name="prevention_main1_sub2">치매예방수칙</string>
	<string name="prevention_main1_sub3">세대별 치매예방액션플랜</string>
		<string name="support_main1_sub1_1">방문간호</string>
		<string name="support_main1_sub1_2">방문요양</string>
		<string name="support_main1_sub1_3">방문목욕</string>
		<string name="support_main1_sub1_4">주.야간보호</string>
		<string name="support_main1_sub1_5">단기보호</string>
		<string name="support_main1_sub1_6">복지용구</string>
			<string name="text_support_main1_sub1_6">
				-수급자의 일상생활, 신체활동 지원에 필요한 물품을 구입하거나 대여가 가능합니다.\n\n
				-건강보험공단 지성 복지용구사업소에 복지용구급여확인서 제시하여야 합니다.\n\n
				-복지용구 연 한도액: 연간 160만원\n
			</string>
			<string name="text_support_main1_sub1_6_1">
				▷ 구입 가능한 복지용구 품목(10종)
			</string>
			<string name="text_support_main1_sub1_6_2">
				▷ 대여 가능한 복지용구 품목(7종)
			</string>
			<string name="text_support_main1_sub1_6_3">
				▷ 구입 또는 대여품목(1종)
			</string>
	<string name="support_main1_sub2_1">노인요양시설</string>
	<string name="support_main1_sub2_2">노인요양공동생활</string>
	<string name="support_main1_sub3_1">가족요양비</string>
</resources>