<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
	<item
			android:id="@+id/action_alarm"
			android:title="@string/action_alarm"
			android:icon="@drawable/ic_access_alarm_black_24dp"
			app:showAsAction="always"/>
	<item android:id="@+id/action_main1" android:title="@string/action_main1" android:orderInCategory="100" app:showAsAction="never"/>
	<item android:id="@+id/action_main2" android:title="@string/action_main2" android:orderInCategory="100" app:showAsAction="never"/>
	<item android:id="@+id/action_main4" android:title="@string/action_main4" android:orderInCategory="100" app:showAsAction="never"/>
	<item android:id="@+id/action_main3" android:title="@string/action_main3" android:orderInCategory="100" app:showAsAction="never"/>
	<item android:id="@+id/action_main5" android:title="@string/action_main5" android:orderInCategory="100" app:showAsAction="never"/>
</menu>
