<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".SupportFirActivity">

	<LinearLayout android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">

		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_margin="@dimen/text_margin"
				android:textColor="@color/colorText_Black"
				android:textSize="@dimen/textView_fontsize"
				android:lineSpacingExtra="@dimen/textView_lineheight"
				android:text="@string/text_support_main1_sub1_6"/>

		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/text_margin"
				android:layout_marginRight="@dimen/text_margin"
				android:textColor="@color/colorText_Black"
				android:textSize="@dimen/textView_fontsize"
				android:lineSpacingExtra="@dimen/textView_lineheight"
				android:text="@string/text_support_main1_sub1_6_1"/>

		<android.support.v7.widget.AppCompatImageButton
				android:text="새창"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/support_main1_sub1_view6_1"
				android:src="@drawable/support_main1_sub1_6_1"
				android:adjustViewBounds="true"
				android:scaleType="fitCenter"
				android:background="@color/colorWhite"
				android:layout_marginLeft="@dimen/text_margin"
				android:layout_marginRight="@dimen/text_margin"
				android:layout_gravity="center"
		/>

		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/text_margin"
				android:layout_marginLeft="@dimen/text_margin"
				android:layout_marginRight="@dimen/text_margin"
				android:textColor="@color/colorText_Black"
				android:textSize="@dimen/textView_fontsize"
				android:lineSpacingExtra="@dimen/textView_lineheight"
				android:text="@string/text_support_main1_sub1_6_2"/>

		<android.support.v7.widget.AppCompatImageButton
				android:text="새창"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/support_main1_sub1_view6_2"
				android:src="@drawable/support_main1_sub1_6_2"
				android:adjustViewBounds="true"
				android:scaleType="fitCenter"
				android:background="@color/colorWhite"
				android:layout_marginLeft="@dimen/text_margin"
				android:layout_marginRight="@dimen/text_margin"
				android:layout_gravity="center"
		/>

		<TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/text_margin"
				android:layout_marginLeft="@dimen/text_margin"
				android:layout_marginRight="@dimen/text_margin"
				android:textColor="@color/colorText_Black"
				android:textSize="@dimen/textView_fontsize"
				android:lineSpacingExtra="@dimen/textView_lineheight"
				android:text="@string/text_support_main1_sub1_6_3"/>

		<android.support.v7.widget.AppCompatImageButton
				android:text="새창"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/support_main1_sub1_view6_3"
				android:src="@drawable/support_main1_sub1_6_3"
				android:adjustViewBounds="true"
				android:scaleType="fitCenter"
				android:background="@color/colorWhite"
				android:layout_marginLeft="@dimen/text_margin"
				android:layout_marginRight="@dimen/text_margin"
				android:layout_gravity="left"
		/>


	</LinearLayout>

</android.support.v4.widget.NestedScrollView>