<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent" android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior"
		tools:showIn="@layout/app_bar_main"
		tools:context=".FeelingActivity"
>

	<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			android:theme="@style/AppTheme.AppBarOverlay"
			android:popupTheme="@style/ThemeOverlay.AppCompat.Light">
	</android.support.v7.widget.Toolbar>

	<LinearLayout android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:id="@+id/linearLayout1"
			app:layout_constraintTop_toBottomOf="@+id/toolbar"
			android:weightSum="12"
			android:background="@color/colorAllBackground"
			android:layout_marginTop="?attr/actionBarSize"
	>

		<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/text_margin"
				android:textColor="@color/colorText_Black"
				android:textSize="@dimen/textView_fontsize"
				android:lineSpacingExtra="@dimen/textView_lineheight"
				android:text="@string/text_feeling_main1"/>
		
		<Button android:text="우울증 검사 해보기"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/_8dp"
				android:layout_marginRight="@dimen/_8dp"
				android:id="@+id/feeling_main1_linkbutton"
				android:layout_weight="1"
				android:background="@color/colorPrimary"
				android:textColor="@color/colorWhite"
				android:textSize="16dp"
				/>

		<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/text_margin"
				android:textColor="@color/colorText_Black"
				android:textSize="@dimen/textView_fontsize"
				android:lineSpacingExtra="@dimen/textView_lineheight"
				android:text="@string/text_feeling_main2"/>

		<Button android:text="자살생각 척도 검사 해보기"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/_8dp"
				android:layout_marginRight="@dimen/_8dp"
				android:id="@+id/feeling_main2_linkbutton"
				android:layout_weight="1"
				android:background="@color/colorPrimary"
				android:textColor="@color/colorWhite"
				android:textSize="16dp"
				/>

		<TextView android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="@dimen/text_margin"
				android:textColor="@color/colorText_Black"
				android:textSize="@dimen/textView_fontsize"
				android:lineSpacingExtra="@dimen/textView_lineheight"
				android:text="@string/text_feeling_main3"/>

		<Button android:text="부양스트레스 검사 해보기"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="@dimen/_8dp"
				android:layout_marginRight="@dimen/_8dp"
				android:layout_marginBottom="@dimen/_8dp"
				android:id="@+id/feeling_main3_linkbutton"
				android:layout_weight="1"
				android:background="@color/colorPrimary"
				android:textColor="@color/colorWhite"
				android:textSize="16dp"
				/>

	</LinearLayout>
</android.support.constraint.ConstraintLayout>